2006-11-11 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (newpCodeOpBit): search SymbolTab for referenced
	  bitfield symbols, fixes #1579535 (once more...).

2006-11-09 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/generate-cases.py,
	* support/regression/fwk/include/testfwk.h,
	* support/regression/fwk/lib/testfwk.c: used code pointers,
	  (about 50kByte less code generated for mcs51) 

2006-11-06 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: fixed failed check because the function
	  rl_function_of_keyseq isn't in Readline 5.2. Thanks to Ilya Goldberg
	  who submitted the patch for gpsim.
	* debugger/mcs51/configure.in: removed the result message
	* debugger/mcs51/Makefile.in: fixed the config.status warning
	  "... seems to ignore the --datarootdir setting"

2006-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/c8051f020.h,
	* device/include/mcs51/c8051f040.h,
	* device/include/mcs51/c8051f060.h,
	* device/include/mcs51/c8051f120.h: added PS0, fixed bug 1589279
	* src/z80/gen.c (gencjneshort),
	* src/z80/peeph.def: applied patch 1571373, thanks Philipp Krause

2006-10-31 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: get readline version

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: replaced hardcoded "/" with DIR_SEPARATOR_STRING
	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: locate readline even when cross compiling
	* support/scripts/sdcc.nsi: include readline5.dll into the setup package

2006-10-29 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/serial_IO.h: putchar() and getchar() using
	  serial port.

2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h,
	* device/lib/calloc.c,
	* device/lib/free.c,