@@ -542,7 +542,7 @@ VOID relr(VOID)
 
         if (lastAreaIndex != aindex) {
             lastAreaIndex = aindex;
-            newArea();
+            ihxNewArea();
         }
 
         if (extendedAddress != lastExtendedAddress)
